add sharding, search, sorting, soft removal